GNOME Bugzilla – Bug 643165
Podcast avoidance code doesn't work
Last modified: 2011-02-25 00:19:14 UTC
(07:18:17) [0x608170] [rhythmdb_entry_new] rhythmdb.c:1778: emitting entry added (07:18:17) [0x608170] [rhythmdb_query_model_chain] rhythmdb-query-model.c:896: query model 0x650bc30 chaining to base model (nil) (07:18:17) [0x608170] [rhythmdb_read_enter] rhythmdb.c:1239: counter: 1 (07:18:17) [0x608170] [rhythmdb_query_internal] rhythmdb.c:4017: doing query (07:18:17) [0x608170] [do_query_recurse] rhythmdb-tree.c:2301: doing recursive query, 1 conjunctions (07:18:17) [0x608170] [rhythmdb_query_model_add_results] rhythmdb-query-model.c:2248: adding 0 entries (07:18:17) [0x608170] [idle_process_update] rhythmdb-query-model.c:1187: inserting 0 rows (07:18:17) [0x608170] [rhythmdb_query_internal] rhythmdb.c:4023: completed (07:18:17) [0x608170] [rhythmdb_entry_new] rhythmdb.c:1778: emitting entry added [Thread 0x7fffd5c01700 (LWP 13794) exited] (07:18:17) [0x608170] [rhythmdb_entry_set] rhythmdb.c:3246: queuing RHYTHMDB_ACTION_ENTRY_SET (07:18:17) [0x608170] [rhythmdb_property_model_insert] rhythmdb-property-model.c:810: adding new property "http://localhost:12345/rss.rss" (07:18:17) [0x608170] [update_sort_string] rhythmdb-property-model.c:739: replacing current sort string NULL with David Allen Company Podcast (0 -> 0) (07:18:17) [0x608170] [rhythmdb_property_model_insert] rhythmdb-property-model.c:810: adding new property "http://localhost:12345/rss.rss" (07:18:17) [0x608170] [update_sort_string] rhythmdb-property-model.c:739: replacing current sort string NULL with David Allen Company Podcast (0 -> 0) (07:18:18) [0x608170] [rhythmdb_process_one_event] rhythmdb.c:2538: processing RHYTHMDB_EVENT_QUERY_COMPLETE (07:18:18) [0x608170] [rhythmdb_read_leave] rhythmdb.c:1253: counter: 0 (07:18:18) [0x608170] [rhythmdb_query_model_dispose] rhythmdb-query-model.c:730: disposing query model 0x650bc30 (07:18:18) [0x608170] [rhythmdb_query_model_finalize] rhythmdb-query-model.c:778: finalizing query model 0x650bc30 (07:18:18) [0x608170] [rhythmdb_process_one_event] rhythmdb.c:2513: processing RHYTHMDB_EVENT_ENTRY_SET (07:18:18) [0x608170] [rhythmdb_property_model_insert] rhythmdb-property-model.c:810: adding new property "http://localhost:12345/rss.rss" (07:18:18) [0x608170] [update_sort_string] rhythmdb-property-model.c:739: replacing current sort string NULL with David Allen Company Podcast (0 -> 0) [New Thread 0x7fffd5c01700 (LWP 13795)] (07:18:18) [0x2ac7590] [rhythmdb_entry_set] rhythmdb.c:3246: queuing RHYTHMDB_ACTION_ENTRY_SET (07:18:18) [0x2ac7590] [rhythmdb_entry_set] rhythmdb.c:3246: queuing RHYTHMDB_ACTION_ENTRY_SET (07:18:18) [0x608170] [rhythmdb_process_one_event] rhythmdb.c:2513: processing RHYTHMDB_EVENT_ENTRY_SET (07:18:18) [0x608170] [rhythmdb_process_one_event] rhythmdb.c:2513: processing RHYTHMDB_EVENT_ENTRY_SET (07:18:19) [0x608170] [rhythmdb_directory_change_cb] rhythmdb-monitor.c:303: directory event 0 for file:///home/data/Music/Podcasts/David%20Allen%20Company%20Podcast/bddac.mp3 (07:18:21) [0x608170] [rhythmdb_directory_change_cb] rhythmdb-monitor.c:303: directory event 1 for file:///home/data/Music/Podcasts/David%20Allen%20Company%20Podcast/bddac.mp3 (07:18:22) [0x608170] [rhythmdb_check_changed_file] rhythmdb-monitor.c:224: adding newly located file file:///home/data/Music/Podcasts/David%20Allen%20Company%20Podcast/bddac.mp3 (07:18:22) [0x608170] [rhythmdb_add_uri_with_types] rhythmdb.c:2998: queueing stat for "file:///home/data/Music/Podcasts/David%20Allen%20Company%20Podcast/bddac.mp3" (07:18:22) [0x490e920] [action_thread_main] rhythmdb.c:2855: executing RHYTHMDB_ACTION_STAT for "file:///home/data/Music/Podcasts/David%20Allen%20Company%20Podcast/bddac.mp3" (07:18:22) [0x608170] [rhythmdb_process_one_event] rhythmdb.c:2505: processing RHYTHMDB_EVENT_STAT RhythmDB-WARNING **: attempt to use same location in multiple entry types aborting... Program received signal SIGABRT, Aborted. 0x0000003c68c36285 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64 64 return INLINE_SYSCALL (tgkill, 3, pid, selftid, sig); (gdb) bt
+ Trace 226086
2128 guint64 new_mtime; 2129 guint64 new_size; 2130 2131 /* update the existing entry, as long as the entry type matches */ 2132 if ((event->entry_type != NULL) && (entry->type != event->entry_type)) 2133 g_warning ("attempt to use same location in multiple entry types"); 2134 2135 if (entry->type == event->ignore_type) 2136 rb_debug ("ignoring %p", entry); 2137 (gdb) p event->entry_type $1 = 0x899450 (gdb) p entry->type $2 = 0x899f70 This is with my podcast directory underneath the music library directory.
Created attachment 181854 [details] [review] rhythmbox: Don't warn when a library entry is a podcast
Review of attachment 181854 [details] [review]: looks sensible enough