rhythmbox: Don't warn when a library entry is a podcast

https://bugzilla.gnome.org/show_bug.cgi?id=643165